# SYS.02.02-automate-meta-wip-category

./: CHANGELOG.org  README.org  SYS.02.02-README.org  generate_readme.sh  mkdocs.yml  pyproject.toml
docs/: index.md
docs/priority/: weights.md
docs/user_guide/: frontmatter_guide.md  recurrence_guide.md
src/: main.py  readme_parser.py
src/meta_wip_automation/: main.py  project_sorter.py  readme_parser.py
tests/: test_cli_interface.py  test_project_sorter.py  test_readme.py  test_readme_parser.py  test_setup.sh
tests/test_projects/: SYS.03.01-README.org  WVN.41.10-README.org  WVN.62.08-README.org
